moved the newsletter modal into a site-wide alert to avoid navbar crowding. Removed image desrciprions on smaller screens. Removed top and bottom padding on the footer to give a sleeker design.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,9 +18,25 @@ h2 {
 
 /* ----------------- Header / Nav-Bar */
 
+.container-fluid .modal-alert-container .col-12{
+    padding-left: 0;
+    padding-right: 0;
+    min-width: 100%;
+    text-align: center;
+}
+
+.modal-nopadding{
+    padding: 0 !important;
+}
+
+.newsletter-alert{
+    margin-bottom: 0;
+    border-radius: 0px;
+
+}
+
 .navbar {
   color: black;
-  
   display: inline;
   text-decoration: none;
   list-style: none;
@@ -84,7 +100,7 @@ nav li a:hover {
 @media screen and (max-width: 600px) {
   .hero-image,
   .hero-outer {
-    height: 20vh;
+    height: 25vh;
     width: 100%;
     position: relative;
     z-index: 0;
@@ -98,6 +114,17 @@ nav li a:hover {
     width: 100%;
     position: relative;
     z-index: 0;
+  }
+}
+
+@media screen and (min-width: 570px) {
+  .hero-image,
+  .hero-outer {
+    height: 25vh;
+    width: 100%;
+    position: relative;
+    z-index: 0;
+    padding-bottom: 15%;
   }
 }
 
@@ -120,7 +147,7 @@ nav li a:hover {
   .cover-text-content,
   .content-header,
   .cover-text-box {
-    font-size: 4vmin;
+    font-size: 2.5vmin;
   }
 }
 
@@ -129,7 +156,7 @@ nav li a:hover {
   .cover-text-content,
   .content-header,
   .cover-text-box {
-    font-size: 3.5vmin;
+    font-size: 3vmin;
   }
 }
 
@@ -229,8 +256,8 @@ nav li a:hover {
 
 @media screen and (min-width: 1200px) {
   .cover-text-box {
-    width: 40%;
-    height: 40%;
+    width: 50%;
+    height: 65%;
     padding-top: 5px;
     padding-left: 10px;
     padding-right: 10px;
@@ -239,21 +266,24 @@ nav li a:hover {
     z-index: 1;
     left: 20px;
     contain: content;
-    bottom: 80px;
+    bottom: 50px;
+}
+  }
+
+
+@media screen and (max-width: 1024px) {
+  .cover-text-header,
+  .cover-text-content {
+    font-size: 3vmin;
   }
 }
 
-@media screen and (min-width: 601px) {
-  .cover-text-header,
-  .cover-text-content {
-    font-size: 2.5vmin;
-  }
-}
+
 
 @media screen and (min-width: 1200px) {
   .cover-text-header,
   .cover-text-content {
-    font-size: 2.5vmin;
+    font-size: 3vmin;
   }
 }
 /* ---------------------- Block dividers */
@@ -442,7 +472,7 @@ nav li a:hover {
   .social-media i {
     font-size: 200%;
     letter-spacing: 0px;
-    padding: 50px;
+    padding: 0 45px 0 45px;
     margin: 1%;
     text-decoration: none;
     color: #777777;
@@ -454,7 +484,7 @@ nav li a:hover {
   .social-media i {
     font-size: 100%;
 
-    padding: 20px;
+    padding: 0 20px 0 20px;
     margin: 1%;
     text-decoration: none;
     color: #777777;
@@ -466,7 +496,7 @@ nav li a:hover {
   .social-media i {
     font-size: 100%;
 
-    padding: 15px;
+    padding: 0 15px 0 15px;
     margin: 1%;
     text-decoration: none;
     color: #777777;
@@ -478,7 +508,7 @@ nav li a:hover {
   .social-media i {
     font-size: 160%;
     letter-spacing: 100px;
-    padding: 45px;
+    padding: 0 45px 0 45px;
     margin: 1%;
     text-decoration: none;
     color: #777777;
@@ -554,7 +584,7 @@ color: white;
 text-transform: none;
 }
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 1366px){
 .image-container:hover .image-description{
   display: none;
 }
